--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -25,6 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Kyle Denief</title>
+    <script defer data-domain="kyledenief.me" src="https://plausible.kyledenief.me/js/plausible.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
