--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,30 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Kyle Denief</title>
+
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#222629" />
     <meta
-      name="description"
-      content="My personal site where I post my projects and blog"
+    name="description"
+    content="My personal site where I post my projects and blog"
     />
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    
+    <!-- -------------------------- Favicon Settings --------------------------- -->
+    <link rel="icon" href="%PUBLIC_URL%/favicons/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicons/favicon-16x16.png">
+    <link rel="mask-icon" href="%PUBLIC_URL%/favicons/safari-pinned-tab.svg" color="#86c232">
+    <meta name="theme-color" content="#222629">
+    <!-- ----------------------------------------------------------------------- -->
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>Kyle Denief</title>
+
+    <!-- Script for analytics using plausible analytics -->
     <script defer data-domain="kyledenief.me" src="https://plausible.kyledenief.me/js/plausible.js"></script>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
