--- a/client/index.html
+++ b/client/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Kyle Denief</title>
+    <title><%- name %></title>
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#222629" />
+    <meta name="theme-color" content="<%- themeColour %>" />
     <meta
-    name="description"
-    content="My personal site where I post my projects and blog"
+      name="description"
+      content="<%- description %>"
     />
 
     <!--
@@ -23,12 +23,11 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
     <link rel="mask-icon" href="/favicons/safari-pinned-tab.svg" color="#86c232">
-    <meta name="theme-color" content="#222629">
     <!-- ----------------------------------------------------------------------- -->
 
 
     <!-- Script for analytics using plausible analytics -->
-    <script defer data-domain="kyledenief.me" src="https://plausible.kyledenief.me/js/plausible.js"></script>
+    <script defer data-domain="<%- dataDomain %>" src="<%- analyticsSrc %>"></script>
 
   </head>
   <body>
